# calendario-chile

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NEXT_STEPS_GITHUB.md  README.md  SECURITY.md  pyproject.toml
docs/: api_static.md  data_dictionary.md  distribution_strategy.md  downloads.md  index.md  legal_notes.md  methodology.md  overview.md  publishing_plan.md  quality.md  roadmap.md  roadmap_v0.2.0.md  schema.md
reports/: ATTRIBUTION_CLEANUP_REPORT.md  FINAL_RELEASE_REPORT.md  FIRST_COMMIT_REPORT.md  LEGAL_LICENSE_REVIEW_CHECKLIST.md  LEGAL_MAPPING_REPORT.md  LICENSE_DECISION_REPORT.md  LOW_CONFIDENCE_NAME_MATCHING_EXPERIMENT.md  LOW_CONFIDENCE_SUMMARY.md  MISSING_LEGAL_BASIS_REVIEW.md  NAME_MATCHING_FAMILY_REVIEW.md  NAME_MATCHING_MANUAL_AUDIT.md  PLEBISCITES_LEGAL_BASIS_PATCH.md  POST_RELEASE_AUDIT.md  PUBLICATION_CHECKLIST.md  PUBLICATION_MATRIX.md  PUBLICATION_REPORT.md  PUBLIC_REPO_CLEAN_CHECK.md  PUBLIC_REPO_READINESS.md  PUBLIC_SURFACE_CLEAN_CHECK.md  QUALITY_REPORT.md  RELEASE_READINESS.md  V0_2_0_PLANNING.md  low_confidence_name_matching_candidates.csv  name_matching_families.csv  name_matching_manual_audit_sample.csv
schema/: calendar_chile_event.schema.json  calendar_chile_holiday.schema.json  datapackage.json
scripts/: _bootstrap.py  analyze_low_confidence_name_matching.py  audit_name_matching_sample.py  build_api.py  build_dataset.py  build_ics.py  build_mvp.py  group_name_matching_families.py  public_clean_check.py  quality_report.py  run_all.sh  source_inventory.py  (+2 more)
(+32 files in other folders)
